--- a/array.html
+++ b/array.html
@@ -7,8 +7,11 @@
   </head>
   <body>
     <script>
-      let asdkaojksoapk = ["pram", "dita", 10];
-      console.log(asdkaojksoapk.length);
+      let arr = ["pram", "dita", 10];
+      let arrduadimensi = [
+        [1, 2],
+        [2, 1],
+      ];
     </script>
   </body>
 </html>
